# soundr-v2

./: README.md
backend/: Dockerfile  docker-compose.yml  readme.md  soundr.pptx
backend/.devcontainer/: devcontainer.json
backend/app/: .env  database.py  main.py  pyproject.toml  settings.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 726f693370c6_create_user_table.py  a33573b146af_create_taste_table.py  ae8603b30641_add_refresh_token_column.py  e20bb74188d7_add_user_column.py
backend/app/dependency/: jwt_token.py  spotipy.py
backend/app/models/: models.py  tastes_crud.py  user_crud.py
backend/app/routers/: spotify.py  users.py
backend/app/schemas/: taste_schemas.py  token_schemas.py  user_schemas.py
backend/app/services/: MatchUsers.py  UserTopArtists.py  UserTopTracks.py
backend/app/utils/: encrypt.py  jwt_token.py
frontend/: .eslintrc.js  next.config.js  package.json  tsconfig.json
frontend/components/containers/: LoginContainer.tsx
frontend/components/layouts/: Footer.tsx  Header.tsx
frontend/components/shared/: Button.tsx  Image.tsx  Link.tsx  Loader.tsx  Text.tsx  index.ts
frontend/constants/: LocalStorage.ts
frontend/interfaces/: User.ts
frontend/pages/: _app.tsx  _document.tsx  index.ts
frontend/pages/dashboard/: dashboard.component.tsx
frontend/pages/index/: index.component.tsx
frontend/pages/profile/: index.ts  (+1 more)
frontend/services/: baseApi.ts  sounder.ts
frontend/theme/: overrides.ts  overridesProps.ts  palette.ts  styleProps.ts  theme.ts  typography.ts
frontend/utils/: functions.ts
(+7 files in other folders)
